# KillAlive

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/damon/kill/alive/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/damon/kill/alive/: IMyAidlInterface.aidl
app/src/main/cpp/: CMakeLists.txt  common.h  native-lib.cpp
app/src/main/java/com/damon/kill/alive/keeplive/: AppProcessRunable.java  DamonHolder.kt  JavaDamon.kt  ServiceHolder.kt
app/src/main/java/com/damon/kill/alive/keeplive/bean/: DamonBean.java  DamonParcel.java
app/src/main/java/com/damon/kill/alive/keeplive/config/: HookMain.java  IBinderManager.java  (+6 more)
app/src/main/java/com/damon/kill/alive/main/: AliveApp.kt  MainActivity.kt
app/src/main/java/com/damon/kill/alive/receiver/: BootChangeReceiver.kt  DamonReceiver.kt
app/src/main/java/com/damon/kill/alive/refelction/: HiddenApi.kt
app/src/main/java/com/damon/kill/alive/sculder/: FutureScheduler.java  RunnableWrapper.java  ShellExecutor.java  SingleThreadFutureScheduler.java  ThreadFactoryWrapper.java
app/src/main/java/com/damon/kill/alive/service/: BaseServices.kt  DamonServices.kt  KeepAliveService.java  MonitorBaseServices.kt  MonitorService1.kt  MonitorService2.kt  NotifactionServices.kt
app/src/main/java/com/damon/kill/alive/utils/: Logger.java  NotificationUtil.java  ToolsUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/damon/kill/alive/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
